# CVM-project

./: CMakeLists.txt  README.md
scripts/: booleans.cvm  counter.cvm  fibonacci.cvm  hello.cvm  input_demo.cvm
src/: ast.h  compiler.cpp  compiler.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  vm.cpp  vm.h
